tests/agl/rejections/scope/record_name_claimed_by_let.agl
record Widget
  x: int

let Widget = 1
print Widget
